--- a/crates/acttey_ecs/trait/Cargo.toml
+++ b/crates/acttey_ecs/trait/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "traits"
+name = "acttey_ecs_trait"
 description = "A simple graphics palette for more interactive web page"
 repository = "https://github.com/ecoricemon/acttey"
-license = "Apache-2.0, MIT"
+license = "Apache-2.0 OR MIT"
 version = "0.0.0"
 edition = "2021"
 
