--- a/crates/acttey_util/Cargo.toml
+++ b/crates/acttey_util/Cargo.toml
@@ -2,7 +2,7 @@
 name = "acttey_util"
 description = "A simple graphics palette for more interactive web page"
 repository = "https://github.com/ecoricemon/acttey"
-license = "Apache-2.0, MIT"
+license = "Apache-2.0 OR MIT"
 version = "0.0.0"
 edition = "2021"
 
@@ -10,5 +10,6 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-web-sys = "0.3.64"
-wasm-bindgen = "0.2.87"
+web-sys = { version = "0.3.64", features = [
+  "console"
+]}
