--- a/crates/acttey_ecs/macro/Cargo.toml
+++ b/crates/acttey_ecs/macro/Cargo.toml
@@ -10,10 +10,11 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = { version = "2.0.38", features = [
   "full",
   "extra-traits"
 ]}
+proc-macro2 = "1.0.69"
 acttey_ecs_trait = { version = "0.0.0", path = "../trait" }
+acttey_struct = { version = "0.0.0", path = "../../acttey_struct" }
