--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,28 @@ crate-type = ["cdylib", "rlib"]
 opt-level = "z"
 lto = true
 
-[workspace]
-members = [
-    "crates/*"
-]
-# Prevent errors when compiling examples
-exclude = [
-    "examples/basic"
-]
-
 [dependencies]
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
-acttey_app = { version = "0.0.0", path = "crates/acttey_app" }
-acttey_ecs = { version = "0.0.0", path = "crates/acttey_ecs" }
-acttey_render = { version = "0.0.0", path = "crates/acttey_render" }
-acttey_struct = { version = "0.0.0", path = "crates/acttey_struct" }
+bytemuck = { version = "1.13.1", features = [
+    "derive",
+    "min_const_generics"
+]}
+paste = "1.0.14"
+js-sys = "0.3.64"
+wgpu = "0.17.1"
+web-sys = { version = "0.3.64", features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "MouseEvent"
+]}
+winit = "0.29.1-beta"
+erased-generic-trait = "0.0.3"
+acttey-ecs-macros = { path = "src/ecs/macros" }
+console_error_panic_hook = "0.1.7"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
