--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -15,4 +15,4 @@ lto = true
 [dependencies]
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
-acttey = { version = "0.0.0", path = "../../" }
+acttey = { path = "../../" }
