--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,47 +7,97 @@ version = "0.0.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["rlib"]
 
 [profile.release]
 opt-level = "z"
 lto = true
+panic = "abort"
 
-[dependencies]
-wasm-bindgen = "0.2.87"
-wasm-bindgen-futures = "0.4.37"
-bytemuck = { version = "1.13.1", features = [
-    "derive",
-    "min_const_generics"
-]}
-paste = "1.0.14"
-js-sys = "0.3.64"
-wgpu = "0.18.0"
-web-sys = { version = "0.3.64", features = [
+[dependencies.wasm-bindgen]
+version = "0.2.87"
+
+[dependencies.wasm-bindgen-futures]
+version = "0.4.37"
+
+[dependencies.js-sys]
+version = "0.3.64"
+
+[dependencies.web-sys]
+version = "0.3.64"
+features = [
     "console",
+    "Node",
     "Window",
+    "Navigator",
+    "Gpu",
     "Document",
     "Element",
     "HtmlCanvasElement",
-    "MouseEvent"
-]}
-winit = "0.29.1-beta"
-erased-generic-trait = "0.0.4"
-acttey-ecs-macros = { path = "src/ecs/macros" }
-console_error_panic_hook = "0.1.7"
-uuid = { version = "1.5.0", features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-    "js"                 # For WebAssembly
-]}
-ahash = "0.8.6"
+    "Performance",
+    "EventTarget",
+    "MouseEvent",
+    "KeyboardEvent",
+]
 
-[dev-dependencies]
-wasm-bindgen-test = "0.3.37"
+# [dependencies.getrandom]
+# version = "0.2.11"
+# features = ["js"]
+
+[dependencies.wgpu]
+version = "0.18.0"
+
+[dependencies.console_error_panic_hook]
+version = "0.1.7"
+
+[dependencies.bytemuck]
+version = "1.14.0"
+features = [
+    "derive",
+    "min_const_generics",
+    "extern_crate_alloc"
+]
+
+[dependencies.paste]
+version = "1.0.14"
+
+[dependencies.ahash]
+version = "0.8.6"
+
+# 0.5.2 is currently compatible with wgpu.
+[dependencies.raw-window-handle]
+version = "0.5.2"
+
+[dependencies.erased-generic-trait]
+path = "crates/erased-generic-trait"
+version = "0.0.4"
+
+[dependencies.my-wgsl]
+path = "crates/my-wgsl"
+
+[dependencies.acttey-ecs-macros]
+path = "src/ecs/macros"
+
+[dependencies.thiserror]
+version = "1.0.50"
+
+[dev-dependencies.wasm-bindgen-test]
+version = "0.3"
+
+[features]
+# Enables wgpu's webgl feature.
+webgl = ["wgpu/webgl"]
+
+[workspace]
+members = [
+    "crates/*",
+]
+exclude = [
+    "examples/basic"
+]
 
 # Just let rust-analyzer know, so that it will look for examples and show us something like inlay hints.
 [[example]]
 name = "basic"
 path = "examples/basic/src/lib.rs"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
