--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -6,13 +6,14 @@ version = "0.0.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 opt-level = "z"
 lto = true
+panic = "abort"
 
 [dependencies]
-wasm-bindgen = "0.2.87"
-wasm-bindgen-futures = "0.4.37"
+wasm-bindgen = "0.2.89"
+wasm-bindgen-futures = "0.4.39"
 acttey = { path = "../../" }
