--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -3,25 +3,30 @@
   "name": "basic",
   "version": "0.1.0",
   "scripts": {
-    "build":         
-        "npm run clean && webpack --config webpack.dev.js",
-    "build-release":
-        "npm run clean && webpack --config webpack.prod.js",
-    "start":
-        "webpack serve --config webpack.dev.js",
-    "test":
-        "wasm-pack test --chrome --headless --workspace",
-    "clean":
-        "rimraf --glob dist **/pkg",
-    "clean-all":
-        "rimraf --glob dist **/pkg target node_modules"
-  },
-  "dependencies": {
-    "lil-gui": "^0.18.2"
+    "wasm-dev": "wasm-pack build --dev . --out-name wasm-index",
+    "wasm-release": "wasm-pack build --release . --out-name wasm-index",
+    "wasm-dev-gpu": "npm run wasm-dev -- --out-dir pkg_gpu",
+    "wasm-release-gpu": "npm run wasm-release -- --out-dir pkg_gpu",
+    "wasm-dev-gl": "npm run wasm-dev -- --out-dir pkg_gl --features acttey/webgl",
+    "wasm-release-gl": "npm run wasm-release -- --out-dir pkg_gl --features acttey/webgl",
+
+    "bundle-dev": "webpack --config webpack.dev.js",
+    "bundle-prod": "webpack --config webpack.prod.js",
+
+    "clean": "rimraf --glob dist pkg_gpu pkg_gl",
+    "clean-all": "rimraf --glob dist pkg_gpu pkg_gl target node_modules",
+
+    "build": "run-s clean wasm-dev-gpu bundle-dev",
+    "build-gl": "run-s clean wasm-dev-gl bundle-dev",
+    "build-all": "run-s clean wasm-dev-gpu wasm-dev-gl bundle-dev",
+    "build-release": "run-s clean wasm-release-gpu wasm-release-gl bundle-prod",
+
+    "start": "webpack serve --config webpack.dev.js",
+    "test": "wasm-pack test --chrome --headless --workspace"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "copy-webpack-plugin": "^11.0.0",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
