--- a/crates/my-wgsl/Cargo.toml
+++ b/crates/my-wgsl/Cargo.toml
@@ -3,8 +3,11 @@ name = "my-wgsl"
 description = "Generating WGSL code from rust"
 repository = "https://github.com/ecoricemon/acttey"
 license = "Apache-2.0 OR MIT"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies.smallvec]
 version = "1.11.2"
@@ -14,6 +17,7 @@ version = "1.0.14"
 
 [dependencies.my-wgsl-macros]
 path = "src/my-wgsl-macros"
+version = "0.0.1"
 
 [dev-dependencies.pretty_assertions] 
 version = "1.4.0"
