--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,7 @@
 [build]
-target = "wasm32-unknown-unknown" # We will see so many errors in the "vscode's problems (based on cargo check)" without this option
+target = "wasm32-unknown-unknown" # We will see so many errors in the "vscode's problems without this option.
 rustflags = [
-    "--cfg=web_sys_unstable_apis", # Enable build on top of wgpu without webgl feature
-    "--cfg=wasm_platform", # We can build without this option, but it enables hints in development
+    "--cfg=web_sys_unstable_apis", # Enable build on top of wgpu without webgl feature.
+    "--cfg=wasm_platform", # We can build without this option, but it enables hints in development.
+    #"--cfg=print_rcell" # Custom (See RCell at src/ds/refs.rs).
 ]
