--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,29 +10,34 @@
     "wasm-r-gpu": "npm run wasm-r -- --out-dir pkg_gpu",
     "wasm-d-gl": "npm run wasm-d -- --out-dir pkg_gl --features acttey/webgl",
     "wasm-r-gl": "npm run wasm-r -- --out-dir pkg_gl --features acttey/webgl",
+    "wasm-mt-common": "cross-env RUSTFLAGS=\"-C target-feature=+atomics,+bulk-memory,+mutable-globals\" rustup run nightly-2023-12-07 wasm-pack build --target web --out-name wasm-index --out-dir pkg_mt .",
+    "wasm-d-mt": "npm run wasm-mt-common -- --dev -Z build-std=panic_abort,std",
+    "wasm-r-mt": "npm run wasm-mt-common -- --release -Z build-std=panic_abort,std",
 
     "bundle-d": "vite build --mode development",
     "bundle-r": "vite build",
 
-    "clean": "rimraf --glob dist pkg_gpu pkg_gl",
-    "clean-all": "rimraf --glob dist pkg_gpu pkg_gl target node_modules",
+    "clean": "rimraf --glob dist pkg_gpu pkg_gl pkg_mt",
+    "clean-all": "rimraf --glob dist pkg_gpu pkg_gl pkg_mt target node_modules",
 
     "build": "run-s clean wasm-d-gpu bundle-d",
     "build-gl": "run-s clean wasm-d-gl bundle-d",
-    "build-all": "run-s clean wasm-d-gpu wasm-d-gl bundle-d",
+    "build-mt": "run-s clean wasm-d-mt bundle-d",
     "build-r": "run-s clean wasm-r-gpu bundle-r",
     "build-r-gl": "run-s clean wasm-r-gl bundle-r",
-    "build-r-all": "run-s clean wasm-r-gpu wasm-r-gl bundle-r",
+    "build-r-mt": "run-s clean wasm-r-mt bundle-r",
 
     "start": "vite preview",
     "test": "wasm-pack test --node"
   },
   "devDependencies": {
-    "vite": "^5.1.6",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-plugin-top-level-await": "^1.4.1",
-    "rollup-plugin-copy": "^3.5.0",
+    "cross-env": "^7.0.3",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
-    "npm-run-all": "^4.1.5"
+    "rollup-plugin-copy": "^3.5.0",
+    "vite": "^5.1.6",
+    "vite-plugin-cross-origin-isolation": "^0.1.6",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
