--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ thiserror = { version = "2.0.3" }
 # =================
 
 [workspace]
-members = ["crates/*", "crates/my-ecs/test-web", "examples/web"]
+members = ["crates/*", "crates/my-ecs/tests-other/web", "examples/web"]
