--- a/crates/my-ecs/src/macros/Cargo.toml
+++ b/crates/my-ecs/src/macros/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "my-ecs-macros"
-description = "macros for my-ecs crate"
+version = "0.1.0"
+edition = "2021"
+description = "A procedural macro for my-ecs crate"
 repository = "https://github.com/ecoricemon/acttey"
 license = "Apache-2.0 OR MIT"
-version = "0.0.2"
-edition = "2021"
 
 [lib]
 proc-macro = true
