--- a/crates/my-wgsl/src/macros/Cargo.toml
+++ b/crates/my-wgsl/src/macros/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "my-wgsl-macros"
-description = "Generating WGSL code from rust"
+version = "0.1.0"
+edition = "2021"
+description = "A procedural macro for my-wgsl crate"
 repository = "https://github.com/ecoricemon/acttey"
 license = "Apache-2.0 OR MIT"
-version = "0.0.1"
-edition = "2021"
 
 [lib]
 proc-macro = true
