--- a/crates/my-wgsl/Cargo.toml
+++ b/crates/my-wgsl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my-wgsl"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "A WGSL generation library from Rust"
 documentation = "https://docs.rs/my-wgsl"
@@ -13,9 +13,15 @@ keywords = ["wgsl"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-my-wgsl-macros = { version = "0.1.2", path = "src/macros" }
+my-wgsl-macros = { version = "0.1.3", path = "../my-wgsl-macros" }
+wgsl-builtin = { version = "0.1.0", path = "../wgsl-builtin" }
 paste = { version = "1.0.14" }
 
 [dev-dependencies] 
 const_format = { version = "0.2.34" }
 pretty_assertions = { version = "1.4.0" }
+
+[[example]]
+name = "var"
+path = "examples/var.rs"
+crate-type = ["bin"]
