--- a/crates/my-ecs-macros/Cargo.toml
+++ b/crates/my-ecs-macros/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "my-ecs-macros"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+rust-version = "1.85"
 description = "A procedural macro for my-ecs crate"
 repository = "https://github.com/ecoricemon/acttey"
 license = "Apache-2.0 OR MIT"
