--- a/crates/my-ecs/Cargo.toml
+++ b/crates/my-ecs/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "my-ecs"
 version = "0.1.0"
-edition = "2021"
-rust-version = "1.80" # std::sync::LazyLock is stable since 1.80.0.
+edition = "2024"
+rust-version = "1.85"
 description = "An Entity Component System (ECS) library"
 documentation = "https://docs.rs/my-ecs"
 readme = "README.md" 
