--- a/crates/wgsl-builtin/Cargo.toml
+++ b/crates/wgsl-builtin/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "wgsl-builtin"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+rust-version = "1.85"
 description = "WGSL builtin types"
 repository = "https://github.com/ecoricemon/acttey"
 license = "Apache-2.0 OR MIT"
